# RAG-Framework

./: .env.example  .gitignore  README.md  pyproject.toml
src/: dependency.py  main.py
src/config/model/: agent.py  mcp.py
src/config/model/chat_model/: __init__.py  google_genai.py
src/config/model/prompt/: __init__.py
src/config/model/recognizer/: __init__.py
src/config/model/recognizer/image/: preprocessing.py
src/data/: __init__.py  base_model.py  database.py  dto.py  model.py
src/data/base_model/: __init__.py  chat_model.py  embeddings.py  recognizer.py  retriever.py  tool.py
src/data/dto/: __init__.py  agent.py  chat_model.py  embeddings.py  mcp.py  prompt.py  recognizer.py  retriever.py  tool.py
src/data/function/: agent.py  chat_model.py  embeddings.py  file.py  mcp.py  prompt.py  recognizer.py  retriever.py  tool.py
src/data/model/: __init__.py  chat_model.py  embeddings.py  mcp.py  recognizer.py  retriever.py  tool.py
src/route/: __init__.py  agent.py  chat_model.py  embeddings.py  file.py  mcp.py  prompt.py  recognizer.py  retriever.py  tool.py
src/util/: __init__.py  constant.py  error.py  function.py
