[project]
name = "rag-framework"
version = "0.1.0"
description = "A framework helps to build RAG Agent quickly."
authors = [
    { name = "BangNhatLe", email = "bangle37568@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "jsonpickle (>=4.1.1,<5.0.0)",
    "pymongo[srv] (>=4.13.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
